# furcate-tee

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile
enclave/: CMakeLists.txt  inference.c  inference.edl
host/: main.c
